Removed some irrelevant lines

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
             <div class="array-inputs">
                 <div class="ranges">
                     <p>SIZE OF ARRAY: </p>
-                    <input id="a_size" type="range" min=5 max=50 step=1 value=20>
+                    <input id="arr_size" type="range" min=5 max=50 step=1 value=20>
                 </div>
                 <div class="ranges">
                     <p>SPEED OF ALGORITHM: </p>
-                    <input id="a_speed" type="range" min=1 max=5 step=1 value=4>
+                    <input id="arr_speed" type="range" min=1 max=5 step=1 value=4>
                 </div>
-                <button>GENERATE NEW BUTTON</button>
+                <button id="arr_generate">GENERATE NEW BUTTON</button>
             </div>
             <div class="nav-right">
                 <div class="heading">
@@ -31,21 +31,12 @@
                     <button>SELECTION</button>
                     <button>INSERTION</button>
                 </div>
-            </div>
-                
+            </div> 
         </div>
-        <!-- <div class="nav-lower">
-            <div class="new-array">
-                <button>GENERATE NEW BUTTON</button>
-            </div>
-            <div class="sorts">
-                <button>BUBBLE</button>
-                <button>MERGE</button>
-                <button>QUICK</button>
-                <button>SELECTION</button>
-                <button>INSERTION</button>
-            </div>
-        </div> -->
     </header>
+
+
+
+    <script src="./scripts/main.js"></script>
 </body>
 </html>
