--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
             <div class="array-inputs">
                 <div class="ranges">
                     <p>SIZE OF ARRAY: </p>
-                    <input id="arr_size" type="range" min=5 max=50 step=1 value=20>
+                    <input id="arr_size" type="range" min=10 max=50 step=1 value=20>
                 </div>
                 <div class="ranges">
                     <p>SPEED OF ALGORITHM: </p>
                     <input id="arr_speed" type="range" min=1 max=5 step=1 value=4>
                 </div>
-                <button id="arr_generate">GENERATE NEW BUTTON</button>
+                <button id="arr_generate">GENERATE NEW ARRAY</button>
             </div>
             <div class="nav-right">
                 <div class="heading">
@@ -34,9 +34,16 @@
             </div> 
         </div>
     </header>
+    <div class="big-cont">
+        <div class="time" ></div>
+        <div id="visualizer">
+
+        </div>
+        <div class="space"></div>
+    </div>
 
 
 
-    <script src="./scripts/main.js"></script>
+    <script src="./main.js"></script>
 </body>
 </html>
