--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
 
 
     <script src="./main.js"></script>
-    <script src="./animation.js"></script>
+    <script src="./js code/animation.js"></script>
+    <script src="./js code/bubble.js"></script>
+    
 </body>
 </html>
