Bubble sort function rectified

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="array-inputs">
                 <div class="ranges">
                     <p>SIZE OF ARRAY: </p>
-                    <input id="arr_size" type="range" min=10 max=80 step=1 value=30>
+                    <input id="arr_size" type="range" min=5 max=80 step=1 value=30>
                 </div>
                 <div class="ranges">
                     <p>SPEED OF ALGORITHM: </p>
@@ -42,11 +42,10 @@
         <div class="space"></div>
     </div>
 
-
-
     <script src="./main.js"></script>
-    <script src="./js code/animation.js"></script>
-    <script src="./js code/bubble.js"></script>
+    <script src="./animation.js"></script>
+
+    <script src="./bubble.js"></script>
     
 </body>
 </html>
