--- a/index.html
+++ b/index.html
@@ -46,6 +46,6 @@
     <script src="./animation.js"></script>
 
     <script src="./bubble.js"></script>
-    
+    <script src="./merge.js"></script>    
 </body>
 </html>
