--- a/index.html
+++ b/index.html
@@ -48,5 +48,6 @@
     <script src="./bubble.js"></script>
     <script src="./merge.js"></script>  
     <script src="./selection.js"></script>  
+    <script src="./insertion.js"></script>
 </body>
 </html>
