--- a/index.html
+++ b/index.html
@@ -49,5 +49,6 @@
     <script src="./merge.js"></script>  
     <script src="./selection.js"></script>  
     <script src="./insertion.js"></script>
+    <script src="./quick.js"></script>
 </body>
 </html>
