Added divs for time and space complexity

--- a/index.html
+++ b/index.html
@@ -35,11 +35,33 @@
         </div>
     </header>
     <div class="big-cont">
-        <div class="time" ></div>
+        <div class="complexity ">
+            <div class="time" >
+                <div>
+                    BEST TIME:
+                    <p id="bestt"></p>
+                </div>
+                <div>
+                    AVERAGE TIME:
+                    <p id="avgt"></p>
+                </div>
+                <div>
+                    WORST TIME:
+                    <p id="worstt"></p>
+                </div>
+            </div>
+        </div>
         <div id="visualizer">
 
         </div>
-        <div class="space"></div>
+        <div class="complexity">
+            <div class="space">
+                <div>
+                    SPACE COMPLEXITY: 
+                    <p id="worsts"></p>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script src="./main.js"></script>
