Accessed all complexity elements

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="space">
                 <div>
                     SPACE COMPLEXITY: 
-                    <p id="worsts"></p>
+                    <p id="spacec"></p>
                 </div>
             </div>
         </div>
