Quick complexity added

--- a/index.html
+++ b/index.html
@@ -37,16 +37,17 @@
     <div class="big-cont">
         <div class="complexity">
             <div class="time" >
+                <h2>TIME COMPLEXITY</h2>
                 <div>
-                    BEST TIME:
+                    BEST CASE:
                     <p id="bestt"></p>
                 </div>
                 <div>
-                    AVERAGE TIME:
-                    <section id="avgt"></section>
+                    AVERAGE CASE:
+                    <p id="avgt"></p>
                 </div>
                 <div>
-                    WORST TIME:
+                    WORST CASE:
                     <p id="worstt"></p>
                 </div>
             </div>
@@ -56,9 +57,20 @@
         </div>
         <div class="complexity">
             <div class="space">
-                <div>
-                    SPACE COMPLEXITY: 
-                    <p id="spacec"></p>
+                <div id="spacecompx">
+                    <h2>SPACE COMPLEXITY</h2>
+                    <div>
+                        BEST CASE:
+                        <p id="bests"></p>
+                    </div>
+                    <div>
+                        AVERAGE CASE:
+                        <p id="avgs"></p>
+                    </div>
+                    <div>
+                        WORST CASE:
+                        <p id="worsts"></p>
+                    </div>
                 </div>
             </div>
         </div>
