Decreasing sort buttons added

--- a/index.html
+++ b/index.html
@@ -25,12 +25,22 @@
                     SORTING VISUALIZER
                 </div>
                 <div class="sorts">
-                    <button>BUBBLE</button>
-                    <button>MERGE</button>
-                    <button>QUICK</button>
-                    <button>SELECTION</button>
-                    <button>INSERTION</button>
+                    <div class="asce">
+                        <button>BUBBLE-A</button>
+                        <button>MERGE-A</button>
+                        <button>QUICK-A</button>
+                        <button>SELECTION-A</button>
+                        <button>INSERTION-A</button>
+                    </div>
+                    <div class="desc">
+                        <button>BUBBLE-D</button>
+                        <button>MERGE-D</button>
+                        <button>QUICK-D</button>
+                        <button>SELECTION-D</button>
+                        <button>INSERTION-D</button>
+                    </div>
                 </div>
+
             </div> 
         </div>
     </header>
