--- a/index.html
+++ b/index.html
@@ -97,5 +97,6 @@
 
     <script src="./bubble_d.js"></script>
     <script src="./merge_d.js"></script>
+    <script src="./quick_d.js"></script>
 </body>
 </html>
