--- a/index.html
+++ b/index.html
@@ -98,5 +98,6 @@
     <script src="./bubble_d.js"></script>
     <script src="./merge_d.js"></script>
     <script src="./quick_d.js"></script>
+    <script src="./selection_d.js"></script>
 </body>
 </html>
