Insertion_d function added

--- a/index.html
+++ b/index.html
@@ -99,5 +99,6 @@
     <script src="./merge_d.js"></script>
     <script src="./quick_d.js"></script>
     <script src="./selection_d.js"></script>
+    <script src="./insertion_d.js"></script>
 </body>
 </html>
